# meeting-room-project

./: Dockerfile  README.md  docker-compose.yml  dockerfile  pyproject.toml
app/: main.py
app/api/: rooms.py
app/auth/: dependencies.py  jwt.py  utils.py
app/db/: session.py
app/models/: booking.py  room.py  user.py
app/routers/: auth.py  booking.py
app/schemas/: auth.py  booking.py  room.py
app/tests/: test_auth.py  test_availability.py  test_booking.py
